refactor: Asynchronous HTTP request